[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "audioflow-local"
version = "1.0.0"
description = "Download, transcribe, validate and organize podcast and video audio."
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31,<3",
    "rich>=13,<15",
    "typer>=0.12,<1",
    "yt-dlp",
    "faster-whisper>=1.1,<2",
]

[project.scripts]
audioflow = "audioflow:app"

[tool.setuptools]
py-modules = ["audioflow"]
